# sdl2-game-template

./: CMakeLists.txt  LICENSE  README.md
Assets/: config.json
docs/: _config_helper_8h_source.html  _game_8h_source.html  _input_handler_8h_source.html  _sound_manager_8h_source.html  _t_t_f_manager_8h_source.html  annotated.html  annotated_dup.js  class_config_helper-members.html  class_config_helper.html  class_game-members.html  class_game.html  class_input_handler-members.html  class_input_handler.html  class_input_handler.js  class_sound_manager-members.html  class_sound_manager.html  class_t_t_f_manager-members.html  class_t_t_f_manager.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  doxygen.css  files.html  functions.html  functions_func.html  navtreedata.js  navtreeindex0.js
docs/html/: _config_helper_8h_source.html  _game_8h_source.html  _input_handler_8h_source.html  _t_t_f_manager_8h_source.html  annotated.html  class_config_helper-members.html  class_config_helper.html  class_config_helper.js  class_game.html  class_game.js  class_input_handler.html  class_t_t_f_manager.html  class_t_t_f_manager.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  index.html
docs/html/search/: all_0.js  all_2.js  classes_0.js  classes_3.js  functions_0.js  functions_1.js  functions_4.js
docs/search/: all_3.js  all_4.js  all_6.js  all_7.js  functions_2.js  functions_3.js  functions_5.js  functions_7.js  functions_a.js  searchdata.js
src/: AssetsManager.cpp  AssetsManager.h  ConfigHelper.cpp  ConfigHelper.h  Game.cpp  Game.h  InputHandler.cpp  InputHandler.h  SoundManager.cpp  SoundManager.h  TTFManager.cpp  TTFManager.h  main.cpp
